--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 4. Enter your json data into "Data to send" box</br>
 5. Click send</br>
 </br>
-Note: Bellow line "Status:" is what browser's socket receive.</br></br>
+<h3>Note: </h3></br>
+Because this file is running on https webpage so you cannot connect to ws:// url (should be wss://). To use this test on ws:// copy this index.html file and run on your own computer. It can connect to ws://</br>
+Bellow line "Status:" is what browser's socket receive.</br></br>
 </p>
 
 <form id="myForm" action="/nothing.asp">
