--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 5. Click send</br>
 </br>
 <h3>Note: </h3></br>
-Because this file is running on https webpage so you cannot connect to ws:// url (should be wss://). To use this test on ws:// copy this index.html file and run on your own computer. It can connect to ws://</br>
+Because this file is running on https webpage so you cannot connect to ws:// url (should be wss://). To use this test on ws:// copy this <a href="https://github.com/dzungvu/test_socket/edit/master/index.html">index.html</a> file and run on your own computer. It can connect to ws://</br>
 Bellow line "Status:" is what browser's socket receive.</br></br>
 </p>
 
@@ -82,5 +82,8 @@ function sendData() {
 }
 </script>
 
+<footer>
+  <p>Refernce: <a href="https://github.com/dzungvu/test_socket">github page</a></p><br>
+</footer>
 </body>
 </html>
